fixed italics colors on medium and dark backgrounds, fixed spacing issues in user data embed #3

--- a/src/scss/libraries/core/objects/_copy.scss
+++ b/src/scss/libraries/core/objects/_copy.scss
@@ -27,6 +27,11 @@
     
     i {
       color: $medium-color;
+
+      .background-medium &,
+      .background-light & {
+        color: $dark-color;
+      }
     }
 
     @include media-query(handheld) {
